--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,19 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+form.form-validated input:invalid {
+  border: 1px dashed orange;
+}
+
+form.form-validated:invalid {
+  border: 1px solid red;
+}
+
+form.form-validated input:valid {
+  border: 1px dashed blue;
+}
+
+form.form-validated:valid {
+  border: 1px solid greenyellow;
+}
